--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PORT=8080
 # db config
 DB_HOST=localhost
 DB_NAME=peerfund
-DB_USER=root
-DB_PASSWORD=mysql123
+DB_USER=softwareroot
+DB_PASSWORD=peer33
