--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: touch .env
-    - run: echo "${{ secrets.PROD_ENV_FILE }}" > .env
+    - name: 'Create env file'
+      run: |
+        touch .env
+        echo "${{ secrets.PROD_ENV_FILE }}" > .env
